# vim: set noexpandtab:

2013-02-21 Steve
	* Updated usage of SUSYObjDef.initialize for SUSYTools-00-02-06-02
	* Tagging SusyCommon-00-00-64

2013-02-20 Steve
	* Added x and y components for each MET term
	* Tagging SusyCommon-00-00-63

2013-02-15 Steve
	* Fixed usage of get_tau_baseline for tau systematics
	* Tagging SusyCommon-00-00-62

2013-02-14 Steve
	* Fixed calculation of muon idTrackPt and msTrackPt. Parentheses were in the wrong place.
	* Tagging SusyCommon-00-00-61

2013-02-10 Steve
	* Changed path of muon trigger sf file to new location in MultiLep package.
		* Default file is on afs, which doesn't work on the grid.
	* Commented out all usage of period I+L pileup reweighting.
		* I don't think this will be used anymore, and we already have
		  too many of these.
	* Tagging SusyCommon-00-00-60

2013-02-10 Steve
	* Added tau systematics TES_UP and TES_DN
	* Added tau efficiency and electron veto scale factors
	* Tagging SusyCommon-00-00-59

2013-02-09 Steve
	* Updated to SUSYTools-00-02-05 (no change here)
	* Added detEta to Jet

2013-02-05 Steve
	* Updated to SUSYTools-00-02-04
	* Updated GetSignalMuonSF usage to get the errEffSF
	* Now saving corrected tau ele BDT flags, using SUSYObjDef.GetCorrectedEleBDTFlag
	* Removed nEntries==0 abort in NtMaker
	* Tagging SusyCommon-00-00-58

2013-01-27 Steve
	* Fixed path for electron med SF file
		* I was using $TestArea instead of $ROOTCOREDIR, which isn't setup the same way on the grid
	* Tagging SusyCommon-00-00-57

2013-01-27 Steve
	* Added errXsec to SusyD3PDAna, saved in SusyNt with NtMaker --errXsec X
	* Tagging SusyCommon-00-00-56

2013-01-26 Steve
	* Added support for Default susy MET
	* Tagging SusyCommon-00-00-55

2013-01-23 Steve
	* Updated code for SUSYTools-00-02-03
	* Update default pileup to full 2012 dataset
	* Added pileup weight for A-E (HCP dataset)
	* Added TElectronEfficiencyCorrectionTool for medium electron SFs.
	  From SUSYTools we can only easily get SFs for tight electrons
